docs/2.14/waf-installation/cloud-platforms/azure/docker-container.md
[default-ip-blocking-settings]:     ../../../admin-en/configure-ip-blocking-nginx-en.md
[wallarm-acl-directive]:            ../../../admin-en/configure-parameters-en.md#wallarm_acl
[allocating-memory-guide]:          ../../../admin-en/configuration-guides/allocate-resources-for-waf-node.md
[mount-config-instr]:               #deploying-the-waf-node-docker-container-configured-through-the-mounted-file
[nginx-waf-directives]:             ../../../admin-en/configure-parameters-en.md

# Deployment of the WAF node Docker image to Azure

This quick guide provides the steps to deploy the [Docker image of the NGINX-based WAF node](https://hub.docker.com/r/wallarm/node) to the Microsoft Azure cloud platform using the [Azure **Container Instances** service](https://docs.microsoft.com/en-us/azure/container-instances/).

!!! warning "The instructions limitations"
    These instructions do not cover the configuration of load balancing and WAF node autoscaling. If setting up these components yourself, we recommend that you read the documentation on [Azure Application Gateway](https://docs.microsoft.com/en-us/azure/application-gateway/overview).

## Requirements

* Active Azure subscription
* [Azure CLI installed](https://docs.microsoft.com/en-us/cli/azure/install-azure-cli)
* Access to the account with the **Administrator** or **Deploy** role and two‑factor authentication disabled in the Wallarm Console for the [EU Cloud](https://my.wallarm.com/) or [US Cloud](https://us1.my.wallarm.com/)

## Options for the WAF node Docker container configuration

--8<-- "../include/waf/installation/docker-running-options.md"

## Deploying the WAF node Docker container configured through environment variables

To deploy the containerized WAF node configured only through environment variables, you can use the following tools:

* [Azure CLI](https://docs.microsoft.com/en-us/azure/container-instances/container-instances-quickstart)
* [Azure portal](https://docs.microsoft.com/en-us/azure/container-instances/container-instances-quickstart-portal)
* [Azure PowerShell](https://docs.microsoft.com/en-us/azure/container-instances/container-instances-quickstart-powershell)
* [ARM template](https://docs.microsoft.com/en-us/azure/container-instances/container-instances-quickstart-template)
* [Docker CLI](https://docs.microsoft.com/en-us/azure/container-instances/quickstart-docker-cli)

In these instructions, the container is deployed using the Azure CLI as follows:

1. Sign in to the Azure CLI by using the [`az login`](https://docs.microsoft.com/en-us/cli/azure/reference-index?view=azure-cli-latest#az_login) command:

    ```bash
    az login
    ```
2. Create a resource group by using the [`az group create`](https://docs.microsoft.com/en-us/cli/azure/group?view=azure-cli-latest#az_group_create) command. For example, create the group `myResourceGroup` in the East US region with the following command:

    ```bash
    az group create --name myResourceGroup --location eastus
    ```
3. Set local environment variables with email and password used for authentication in the Wallarm Cloud:

    ```bash
    export DEPLOY_USER='<DEPLOY_USER>'
    export DEPLOY_PASSWORD='<DEPLOY_PASSWORD>'
    ```

    * `<DEPLOY_USER>`: email to the **Deploy** or **Administrator** user account in the Wallarm Console.
    * `<DEPLOY_PASSWORD>`: password to the **Deploy** or **Administrator** user account in the Wallarm Console.
4. Create an Azure resource from the WAF node Docker container by using the [`az container create`](https://docs.microsoft.com/en-us/cli/azure/container?view=azure-cli-latest#az_container_create) command:

    === "Command for the Wallarm EU Cloud"
         ```bash
         az container create \
            --resource-group myResourceGroup \
            --name waf-node \
            --dns-name-label wallarm-waf \
            --ports 80 \
            --image registry-1.docker.io/wallarm/node:2.14 \
            --environment-variables DEPLOY_USER=${DEPLOY_USER} DEPLOY_PASSWORD=${DEPLOY_PASSWORD} NGINX_BACKEND='example.com'
         ```
    === "Command for the Wallarm US Cloud"
         ```bash
         az container create \
            --resource-group myResourceGroup \
            --name waf-node \
            --dns-name-label wallarm-waf \
            --ports 80 \
            --image registry-1.docker.io/wallarm/node:2.14 \
            --environment-variables DEPLOY_USER=${DEPLOY_USER} DEPLOY_PASSWORD=${DEPLOY_PASSWORD} NGINX_BACKEND='example.com' WALLARM_API_HOST='us1.api.wallarm.com'
         ```
        
    * `--resource-group`: name of the resource group created in the second step.
    * `--name`: name of the container.
    * `--dns-name-label`: DNS name label for the container.
    * `--ports`: port on which the WAF node listens.
    * `--image`: name of the WAF node Docker image.
    * `--environment-variables`: environment variables with the WAF node configuration (available variables are listed in the table below). Please note that it is not recommended to pass the values of `DEPLOY_USER` and `DEPLOY_PASSWORD` explicitly.

        --8<-- "../include/waf/installation/nginx-docker-all-env-vars-214.md"
5. Open the [Azure portal](https://portal.azure.com/) and ensure the created resource is displayed in the list of resources.
6. [Test the WAF node operation](#testing-the-waf-node-operation).

## Deploying the WAF node Docker container configured through the mounted file

To deploy the containerized WAF node configured through environment variables and mounted file, only [Azure CLI](https://docs.microsoft.com/en-us/cli/azure/install-azure-cli) can be used.

To deploy the container with environment variables and mounted configuration file:

1. Sign in to the Azure CLI by using the [`az login`](https://docs.microsoft.com/en-us/cli/azure/reference-index?view=azure-cli-latest#az_login) command:

    ```bash
    az login
    ```
2. Create a resource group by using the [`az group create`](https://docs.microsoft.com/en-us/cli/azure/group?view=azure-cli-latest#az_group_create) command. For example, create the group `myResourceGroup` in the East US region with the following command:

    ```bash
    az group create --name myResourceGroup --location eastus
    ```
3. Create a configuration file with the WAF node settings locally. A example of the file with minimal settings:

    ```bash
    server {
        listen 80 default_server;
        listen [::]:80 default_server ipv6only=on;
        #listen 443 ssl;

        server_name localhost;

        #ssl_certificate cert.pem;
        #ssl_certificate_key cert.key;

        root /usr/share/nginx/html;

        index index.html index.htm;

        wallarm_mode monitoring;
        # wallarm_instance 1;
        # wallarm_acl default;

        location / {
                proxy_pass http://example.com;
                include proxy_params;
        }
    }
    ```

    [Set of WAF node directives that can be specified in the configuration file →](../../../admin-en/configure-parameters-en.md)
4. Locate the configuration file in one of the ways suitable for mounting data volumes in Azure. All methods are described in the [**Mount data volumes** section of the Azure documentation](https://docs.microsoft.com/en-us/azure/container-instances/container-instances-volume-azure-files).

    In these instructions, the configuration file is mounted from the Git repository.
5. Set local environment variables with email and password used for authentication in the Wallarm Cloud:

    ```bash
    export DEPLOY_USER='<DEPLOY_USER>'
    export DEPLOY_PASSWORD='<DEPLOY_PASSWORD>'
    ```

    * `<DEPLOY_USER>`: email to the **Deploy** or **Administrator** user account in the Wallarm Console.
    * `<DEPLOY_PASSWORD>`: password to the **Deploy** or **Administrator** user account in the Wallarm Console.
6. Create an Azure resource from the WAF node Docker container by using the [`az container create`](https://docs.microsoft.com/en-us/cli/azure/container?view=azure-cli-latest#az_container_create) command:

    === "Command for the Wallarm EU Cloud"
         ```bash
         az container create \
            --resource-group myResourceGroup \
            --name waf-node \
            --dns-name-label wallarm-waf \
            --ports 80 \
            --image registry-1.docker.io/wallarm/node:2.14 \
            --gitrepo-url <URL_OF_GITREPO> \
            --gitrepo-mount-path /etc/nginx/sites-enabled \
            --environment-variables DEPLOY_USER=${DEPLOY_USER} DEPLOY_PASSWORD=${DEPLOY_PASSWORD}
         ```
    === "Command for the Wallarm US Cloud"
         ```bash
         az container create \
            --resource-group myResourceGroup \
            --name waf-node \
            --dns-name-label wallarm-waf \
            --ports 80 \
            --image registry-1.docker.io/wallarm/node:2.14 \
            --gitrepo-url <URL_OF_GITREPO> \
            --gitrepo-mount-path /etc/nginx/sites-enabled \
            --environment-variables DEPLOY_USER=${DEPLOY_USER} DEPLOY_PASSWORD=${DEPLOY_PASSWORD} WALLARM_API_HOST='us1.api.wallarm.com'
         ```

    * `--resource-group`: name of the resource group created in the 2nd step.
    * `--name`: name of the container.
    * `--dns-name-label`: DNS name label for the container.
    * `--ports`: port on which the WAF node listens.
    * `--image`: name of the WAF node Docker image.
    * `--gitrepo-url`: URL of the Git repository containing the configuration file. If the file is located in the repository root, you need to pass only this parameter. If the file is located in a separate Git repository directory, please also pass the path to the directory in the `--gitrepo-dir` parameter (for example,<br>`--gitrepo-dir ./dir1`).
    * `--gitrepo-mount-path`: directory of the container to mount the configuration file to. Configuration files can be mounted to the following container directories used by NGINX:

        * `/etc/nginx/conf.d` — common settings
        * `/etc/nginx/sites-enabled` — virtual host settings
        * `/var/www/html` — static files

        The WAF node directives should be described in the `/etc/nginx/sites-enabled/default` file.
    
    * `--environment-variables`: environment variables containing settings for the WAF node and Wallarm Cloud connection (available variables are listed in the table below). Please note that it is not recommended to explicitly pass the values of `DEPLOY_USER` and `DEPLOY_PASSWORD`.

        --8<-- "../include/waf/installation/nginx-docker-env-vars-to-mount.md"
7. Open the [Azure portal](https://portal.azure.com/) and ensure the created resource is displayed in the list of resources.
8. [Test the WAF node operation](#testing-the-waf-node-operation).

## Testing the WAF node operation

1. Open the created resource on the Azure portal and copy the **FQDN** value.

    ![!Settig up container instance](../../../images/waf-installation/azure/container-copy-domain-name.png)

    If the **FQDN** field is empty, please ensure the container is in the **Running** status.

2. Send the request with test [SQLI](../../../attacks-vulns-list.md#sql-injection) and [XSS](../../../attacks-vulns-list.md#crosssite-scripting-xss) attacks to the copied domain:

    ```
    curl http://<COPIED_DOMAIN>/?id='or+1=1--a-<script>prompt(1)</script>'
    ```

    If the WAF node mode is `block`, then the request will be blocked with the response `403 Forbidden` returned.
3. Open the Wallarm Console → **Events** section in the [EU Cloud](https://my.wallarm.com/search) or [US Cloud](https://us1.my.wallarm.com/search) and ensure attacks are displayed in the list.
    ![!Attacks in UI](../../../images/admin-guides/test-attacks.png)

Details on errors occurred during the container deployment are displayed on the **Containers** → **Logs** tab of the resource details on the Azure portal. If the resource is unavailable, please ensure required WAF node parameters with correct values are passed to the container.
